; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_stop.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@AUTOMOUNT_WAITING = common dso_local global i32 0, align 4
@AUTOMOUNT_RUNNING = common dso_local global i32 0, align 4
@AUTOMOUNT_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @automount_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @automount_stop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_6__* @AUTOMOUNT(i32* %4)
  store %struct.TYPE_6__* %5, %struct.TYPE_6__** %3, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = call i32 @assert(%struct.TYPE_6__* %6)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AUTOMOUNT_WAITING, align 4
  %12 = load i32, i32* @AUTOMOUNT_RUNNING, align 4
  %13 = call %struct.TYPE_6__* @IN_SET(i32 %10, i32 %11, i32 %12)
  %14 = call i32 @assert(%struct.TYPE_6__* %13)
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = load i32, i32* @AUTOMOUNT_SUCCESS, align 4
  %17 = call i32 @automount_enter_dead(%struct.TYPE_6__* %15, i32 %16)
  ret i32 1
}

declare dso_local %struct.TYPE_6__* @AUTOMOUNT(i32*) #1

declare dso_local i32 @assert(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_6__* @IN_SET(i32, i32, i32) #1

declare dso_local i32 @automount_enter_dead(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
